--- a/Jk_Fitness/Views/Home/Index.cshtml
+++ b/Jk_Fitness/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                                 <button type="button" id="btnSearch" class="btn btn-secondary col-md-12 col-sm-12"><i class="fa fa-search"></i> Search</button>
                             </div>
                         </div>
-                        <div class="card-footer table-responsive">
+                        <div class="card-footer table-responsive col-md-10">
                             <table id="example1" class="table table-bordered table-striped tblNewRequest">
                                 <thead>
                                     <tr>
@@ -50,12 +50,21 @@
                     </div>
                     <div class="tab-pane fade" id="trainingHistory" role="tabpanel" aria-labelledby="custom-tabs-three-settings-tab">
                         <div class="form-group row ">
-                            <label class="control-label col-md-1 col-sm-1 ">Month</label>
-                            <div class="col-md-4 col-sm-4">
-                                <select class="form-control" id="Month"></select>
+                            <div class="form-group col-md-3">
+                                <label>Year</label>
+                                <div class="col-md-12 col-sm-12 ">
+                                    <select class="form-control" id="Year"></select>
+                                </div>
                             </div>
+                            <div class="form-group col-md-3">
+                                <label>Month</label>
+                                <div class="col-md-12 col-sm-12">
+                                    <select class="form-control" id="Month"></select>
+                                </div>
+                            </div>
+
                         </div>
-                        <div class="card-footer table-responsive">
+                        <div class="card-footer table-responsive col-md-10">
                             <table id="example1" class="table table-bordered table-striped tblRequestHistroy">
                                 <thead>
                                     <tr>
@@ -83,5 +92,6 @@
     <input type="hidden" id="NewTrainingRequest" value="@Url.Action("NewTrainingRequest", "Home")" />
     <input type="hidden" id="TrainingRequestHistroy" value="@Url.Action("TrainingRequestHistroy", "Home")" />
     <input type="hidden" id="UpdateRequestTrainerStatus" value="@Url.Action("UpdateRequestTrainerStatus", "Home")" />
+    <input type="hidden" id="GetStartandEndYear" value="@Url.Action("GetTrainingStartandEndYear", "Home")" />
 </div>
 <script src="~/js/page.employeeHome.js"></script>
