--- a/Jk_Fitness/Views/MemberHome/Index.cshtml
+++ b/Jk_Fitness/Views/MemberHome/Index.cshtml
@@ -58,7 +58,7 @@
                     <div class="col-md-12 form-group row">
                         <div class="col-md-5">
                             <div class="row">
-                                <h2>New Request</h2>
+                                <h2>New Training Request</h2>
                             </div>
                             <br />
                             <div class="form-group row ">
@@ -102,11 +102,20 @@
                             </div>
                             <br />
                             <div class="form-group row ">
-                                <label class="control-label col-md-2 col-sm-2 ">Month</label>
-                                <div class="col-md-4 col-sm-4">
-                                    <select class="form-control" id="Month"></select>
+                                <div class="form-group col-md-4">
+                                    <label>Year</label>
+                                    <div class="col-md-12 col-sm-12 ">
+                                        <select class="form-control" id="Year"></select>
+                                    </div>
                                 </div>
-                                <div class="col-md-2 col-sm-2"></div>
+                                <div class="form-group col-md-4">
+                                    <label>Month</label>
+                                    <div class="col-md-12 col-sm-12">
+                                        <select class="form-control" id="Month"></select>
+                                    </div>
+                                </div>
+
+                                @*<div class="col-md-2 col-sm-2"></div>*@
                             </div>
                             <div class="card-footer table-responsive">
                                 <table id="tblTrainingHistroy" class="table table-bordered table-striped tblTrainingHistroy">
@@ -140,12 +149,13 @@
         <input type="hidden" id="TrainingHistroy" value="@Url.Action("TrainingHistroy", "MemberHome")" />
         <input type="hidden" id="SignOutLogin" value="@Url.Action("MemberSignOutLogin","Login")" />
         <input type="hidden" id="LoginHome" value="@Url.Action("Initial","Login")" />
+        <input type="hidden" id="GetStartandEndYear" value="@Url.Action("GetTrainingStartandEndYear", "MemberHome")" />
     </div>
 
 
 
     <script src="~/js/page.memberHome.js"></script>
-   
+
     <!-- jQuery -->
     <script src="~/plugins/jquery/jquery.js"></script>
     <!-- jQuery -->
