--- a/Jk_Fitness/Views/Product/ViewSoldProducts.cshtml
+++ b/Jk_Fitness/Views/Product/ViewSoldProducts.cshtml
@@ -48,7 +48,8 @@
                             <th>Product Name</th>
                             <th>Branch</th>
                             <th>Price Per Product</th>
-                            <th>Sold Price</th>
+                            <th>Sold Price Per Product</th>
+                            <th>Quantity</th>
                             <th>Total Sold Price</th>
                             <th>Sold Date</th>
                             <th></th>
