--- a/Jk_Fitness/Views/Membership/Index.cshtml
+++ b/Jk_Fitness/Views/Membership/Index.cshtml
@@ -144,13 +144,13 @@
                                 </div>
                             </div>
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Gender</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Gender<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9">
                                     <select class="form-control" id="Gender"></select>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">Date of birth</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Date of birth<span class="error" style="color: red;">*</span></label>
                                 <div class="input-group date col-md-9 col-sm-9" id="fromdate" data-target-input="nearest">
                                     <input type="text" id="DOB" class="form-control datetimepicker-input" data-target="#fromdate" data-toggle="datetimepicker" />
                                     <div class="input-group-append" data-target="#fromdate" data-toggle="datetimepicker">
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Age</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Age<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9 ">
                                     <input type="text" id="Age" class="form-control" placeholder="Age">
                                 </div>
@@ -238,9 +238,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">
-                                    Province <span class="error" style="color: red;">*</span>
-                                </label>
+                                <label class="control-label col-md-3 col-sm-3 ">Province</label>
                                 <div class="col-md-9 col-sm-9">
                                     <select class="form-control" id="Province"></select>
                                 </div>
